scrollbar styling + search font size fix

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -75,3 +75,24 @@ main {
   flex-direction: column;
   justify-content: center;
 }
+
+//===============scrollbar===============//
+
+body::-webkit-scrollbar {
+	width: 12px;
+  &-thumb {
+    border-radius:5px;
+    background-color: var(--color-orange);	
+  }
+  &-track{
+    background-color: var(--color-white);
+  }
+  &-corner{
+    display: none;
+  }
+}
+body.dark-theme::-webkit-scrollbar-track{
+  background-color: var(--color-grey-2);
+}
+
+
